feat: Enhance MT5 Auto-Execution Module for multi-user support and improved trade management

--- a/.env.template
+++ b/.env.template
@@ -8,5 +8,10 @@ MT5_TIMEOUT=60000
 TELEGRAM_BOT_TOKEN=your_bot_token_from_botfather
 TELEGRAM_ADMIN_ID=your_telegram_user_id
 
+# Auto-Execution Feature
+# Set to 'true' to automatically execute signals in MT5
+# Set to 'false' to only send notifications (RECOMMENDED for testing)
+AUTO_EXECUTE_TRADES=false
+
 # Logging
 LOG_LEVEL=INFO
