--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ pyfiglet==1.0.2
 aiosqlite==0.19.0
 cryptography==41.0.7
 reportlab==4.0.7
+apscheduler==3.10.4
+pytz==2023.3
+requests==2.31.0
+timezonefinder==6.2.0
+geocoder==1.38.1
